# branchy-bot

branchy-attrib/: Cargo.toml
branchy-attrib/src/: lib.rs
branchy-bot/: Cargo.toml
branchy-bot/servers/deepmoji/: filter_utils.py  model_def.py  server.py  word_generator.py
branchy-bot/src/: commands.rs  main.rs
branchy-bot/src/commands/: emojify.rs  fortune.rs  mathematica.rs
