[package]
name = "branchy-attrib"
version = "0.1.0"
authors = ["Undo-all <undoall2@gmail.com>"]
edition = "2018"

[dependencies]
#syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
version =  "0.15"
default-features = false
features = ["clone-impls", "parsing", "printing", "proc-macro", "extra-traits", "full"]

[lib]
proc-macro = true
